put and delete routes done still need validation and errors
