# controllers/trips.js
@@ -69,4 +69,64 @@ const createTrip = async (req, res, next) => {
   }
 };
 
-module.exports = { getAllTrips, getTripById, createTrip };
+// update trip by id in the database
+const updateTrip = async (req, res, next) => {
+  try {
+    const tripId = new ObjectId(req.params.id);
+    const trip = {
+      location: req.body.location,
+      description: req.body.description,
+      startDate: req.body.startDate,
+      endDate: req.body.endDate,
+      numPeople: req.body.numPeople,
+      totalCost: req.body.cost,
+      activities: req.body.activities
+    };
+    const response = await mongodb
+      .getDb()
+      .db('planner')
+      .collection('trips')
+      .replaceOne({ _id: tripId }, trip);
+    console.log(response);
+    if (response.modifiedCount === 1) {
+      console.log('Updated successfully');
+      res.setHeader('Content-Type', 'application/json');
+      res.status(204).json(response).send;
+    } else {
+      res.status(500).json(response.error || 'An error occurred!');
+    }
+  } catch (err) {
+    console.log(err);
+    res.status(500).json({ error: err });
+  }
+};
+
+// delete contact by id in the database
+const deleteTrip = async (req, res, next) => {
+  try {
+    const tripId = new ObjectId(req.params.id);
+    const response = await mongodb
+      .getDb()
+      .db('planner')
+      .collection('trips')
+      .deleteOne({ _id: tripId });
+    if (response.deletedCount === 1) {
+      console.log('Deleted successfully');
+      res.setHeader('Content-Type', 'application/json');
+      res.status(200).json(response).send;
+    } else {
+      res.status(500).json(response.error || 'An error occurred!');
+    }
+  } catch (err) {
+    console.log(err);
+    res.status(500).json({ error: err });
+  }
+};
+
+module.exports = {
+  getAllTrips,
+  getTripById,
+  createTrip,
+  updateTrip,
+  deleteTrip
+};
