# controllers/wishlists.js
@@ -65,4 +65,60 @@ const createWishlist = async (req, res, next) => {
   }
 };
 
-module.exports = { getAllWishlists, getWishlistById, createWishlist };
+// update wishlist by id in the database
+const updateWishlist = async (req, res, next) => {
+  try {
+    const wishlistId = new ObjectId(req.params.id);
+    const wishlist = {
+      location: req.body.location,
+      description: req.body.description,
+      activities: req.body.activities
+    };
+    const response = await mongodb
+      .getDb()
+      .db('planner')
+      .collection('wishlists')
+      .replaceOne({ _id: wishlistId }, wishlist);
+    console.log(response);
+    if (response.modifiedCount === 1) {
+      console.log('Updated successfully');
+      res.setHeader('Content-Type', 'application/json');
+      res.status(204).json(response).send;
+    } else {
+      res.status(500).json(response.error || 'An error occurred!');
+    }
+  } catch (err) {
+    console.log(err);
+    res.status(500).json({ error: err });
+  }
+};
+
+// delete contact by id in the database
+const deleteWishlist = async (req, res, next) => {
+  try {
+    const wishlistId = new ObjectId(req.params.id);
+    const response = await mongodb
+      .getDb()
+      .db('planner')
+      .collection('wishlists')
+      .deleteOne({ _id: wishlistId });
+    if (response.deletedCount === 1) {
+      console.log('Deleted successfully');
+      res.setHeader('Content-Type', 'application/json');
+      res.status(200).json(response).send;
+    } else {
+      res.status(500).json(response.error || 'An error occurred!');
+    }
+  } catch (err) {
+    console.log(err);
+    res.status(500).json({ error: err });
+  }
+};
+
+module.exports = {
+  getAllWishlists,
+  getWishlistById,
+  createWishlist,
+  updateWishlist,
+  deleteWishlist
+};
